kubernetes/appweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appweb-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appweb
  template:
    metadata:
      labels:
        app: appweb
    spec:
      containers:
      - name: appweb
        image: 488811952251.dkr.ecr.us-west-2.amazonaws.com/webapp:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "384Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
