kubernetes/dbpostgrest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: 315431037525.dkr.ecr.us-west-2.amazonaws.com/database:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "384Mi"
            cpu: "500m"

        ports:
        - containerPort: 5432
      imagePullSecrets:
      - name: regcred
