kubernetes/appteste-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appteste-service
spec:
  type: LoadBalancer
  selector:
    app: appteste
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  externalIPs:
   - 34.220.105.173
