kubernetes/appweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appweb-service
spec:
  type: LoadBalancer
  selector:
    app: appweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
