kubernetes/dbpostgrest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbpostgrest-service
spec:
  type: LoadBalancer
  selector:
    app: dbpostgrest
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
