kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
spec:
  ingressClassName: alb
  rules:
      http:
        paths:
          - path: /
            backend:
              service:
                name: appweb-service
                port:
                  number: 80
